Switch from WebFlux to WebMvc