@@ -2,24 +2,21 @@ package am.ik.blog.entry.search;
 
 import am.ik.blog.category.Category;
 
-import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.StringJoiner;
 
-import static java.util.stream.Collectors.toList;
-
 public class CategoryOrders {
 
-    private final Set<CategoryOrder> value = new HashSet<>();
+    private final Set<CategoryOrder> value = new LinkedHashSet<>();
 
     public CategoryOrders() {
     }
 
     public static CategoryOrders from(List<String> list) {
         List<Category> categories = list.stream()
-            .map(Category::of)
-            .collect(toList());
+                .map(Category::new).toList();
         int order = categories.size() - 1;
         Category category = categories.get(order);
         return new CategoryOrders().add(category, order) /* TODO */;
